# nsuoop

./: LICENSE  README.md
BitArray/: CMakeLists.txt  main.cpp
GameOfLife/: CMakeLists.txt  Cell.cpp  Cell.h  ConsoleParser.cpp  ConsoleParser.h  FileManagment.cpp  FileManagment.h  FileService.cpp  FileService.h  Game.cpp  Life.cpp  Life.h  main.cpp
GameOfLife/examples/: example.life  glider.life  pulsar.life  stick.life
Initial/: module1.cpp  module1.h  module2.cpp  module3.h  test_module2.cpp
SoundProcessor/: .gitignore  CMakeLists.txt  CommandParser.cpp  CommandParser.h  ConfigParser.cpp  ConfigParser.h  Converters.cpp  Converters.h  Launch.cpp  Launch.h  SoundProcessor.cpp  SoundProcessor.h  WAV.cpp  WAV.h  main.cpp
SoundProcessor/lib/: CommandParser.cpp  CommandParser.h  ConfigParser.cpp  ConfigParser.h  Converters.cpp  Converters.h  SoundProcessor.cpp  SoundProcessor.h  WAV.cpp
WordCounter/: WordCounter.cpp  WordCounter.h  main.cpp
parserCSV/: CMakeLists.txt  main.cpp  parser.cpp  parser_csv.h  print_tuple.h  test.cpp
parserCSV/csv_for_tests/: test2.csv  test4.csv  test5.csv
task1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  module3.cpp  report.md  test.cpp  test_module1.cpp  test_module2.cpp
task1b/: CMakeLists.txt  WordCounter.cpp  WordCounter.h  test.cpp
task2a/: BitArray.cpp  BitArray.h  CMakeLists.txt  test.cpp
task3/: CMakeLists.txt  FileManagment.cpp  FileManagment.h  Game.cpp  Game.h  Life.cpp  Life.h  aboba
task3/examples/: beacon.life  example
